left-sidebar: Fix streams header not sticking correctly when auto-collapse is disabled
Previously, when auto-collapse of the Views section was disabled, the streams-header  did not properly stick to the direct-messages-section-header  on scroll. This commit adjusts the logic to handle that case and ensures consistent sticky behavior regardless of the auto-collapse setting.
fixes part of #34470

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -755,7 +755,7 @@ li.active-sub-filter {
         }
     }
 
-    .top-left-active-filter {
+    . {
         /* Don't display a background on condensed icons. */
         background: unset;
     }
@@ -1721,9 +1721,16 @@ li.topic-list-item {
     /* Keep sticky within SimpleBar context. The -0.25px
     offset ensures that no gap is present between the
     direct-messages-section-header and the streams-header */
-    top: 54px;
-    z-index: 2;
+    z-index: 5;
     background-color: var(--color-background);
+
+    &:not(.keep_views_expanded) {
+        top: 54px;
+    }
+    
+    &.keep_views_expanded {
+        top: 230.4px;
+    }
 
     &.scrolled {
         box-shadow: 0 1px 1px -1px hsl(0deg 0% 0% / 100%),
